--- a/Full Stack Code/frontend/.gitignore
+++ b/Full Stack Code/frontend/.gitignore
@@ -11,6 +11,9 @@ node_modules
 dist
 dist-ssr
 *.local
+# Ignore config.json file
+..\Backend\.env
+
 
 # Editor directories and files
 .vscode/*
@@ -22,5 +25,4 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
-.env
-
+*.env
