--- a/Full Stack Code/frontend/package.json
+++ b/Full Stack Code/frontend/package.json
@@ -22,6 +22,7 @@
     "draft-js": "^0.11.7",
     "flowbite": "^2.5.2",
     "flowbite-datepicker": "^1.3.0",
+    "flowbite-react": "^0.10.2",
     "gsap": "^3.12.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
